# OpportunityRadar

./: .env  .env.docker  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  kaggle_debug.html  kaggle_live.html  pyproject.toml  requirements.txt
demo/: DEMO.md  DEMO_RECORDING_PLAN.md  PITCH_SCRIPT.md  opportunity-radar-enhanced.html
demo/video_assets/: concat_list.txt
docker/: docker-compose.yml  init-db.sql
docs/: ARCHITECTURE.md  DEMO_RECORDING_PLAN.md  ROADMAP.md  design.md  workflow-checklist.md
docs/code-reviews/: feat-onboarding-tutorial-flow-review.yaml
docs/issues/: 002-pending-p2-api-contract-mismatch.md  003-pending-p2-stale-matches-accumulation.md  007-pending-p3-status-during-recalculation.md
docs/plans/: P0-admin-dashboard.md  P0-opportunity-crawler.md  P1-deadline-reminder.md  P1-matching-algorithm.md  P1-team-profile.md  feat-user-onboarding-tutorial-flow.md
frontend/: .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: error-boundary.tsx
frontend/hooks/: use-debounce.ts  use-keyboard-shortcuts.ts
frontend/services/: api-client.ts
frontend/stores/: auth-store.ts  onboarding-store.ts  tour-store.ts
frontend/types/: index.ts
migrations/: env.py
plans/: feat-manual-tour-trigger.md  fix-ai-generator-materials-endpoint.md
scripts/: README.md  check_db_status.py  create_admin.py  create_tables.sql  init_db.py  populate_all_opportunities.py  populate_opportunities.py  test_scrapers.py  test_system.py  update_opportunity_details.py
scripts/admin/: create_admin.py
scripts/db/: check_db_status.py  init-db.sql  init_db.py
scripts/demo/: cleanup_demo_data.py  create_demo_account.py  generate_demo_matches.py  test_demo_apis.py
scripts/docker/: start-docker.bat  start-docker.sh
scripts/embeddings/: README.md  generate_embeddings.py
scripts/scrapers/: populate_all_opportunities.py  run.py  test_scrapers.py  update_opportunity_details.py
scripts/tests/: test_system.py
src/opportunity_radar/: __init__.py  config.py  (+1 more)
tests/: TEST_RESULTS.md  __init__.py  conftest.py
todos/: 001-pending-p2-batch-id-field-missing.md  004-pending-p2-background-task-blocking.md  005-pending-p2-ssrf-url-extraction.md  006-pending-p2-industries-data-loss.md  007-pending-p3-status-during-recalculation.md  008-pending-p3-polling-error-handling.md  009-pending-p3-typescript-any-types.md  010-pending-p3-missing-endpoint-tests.md
(+183 files in other folders)
